crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__builtin_pair.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\npair(a, b)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Pair {
        first: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var(
                "a",
            ),
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 9,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Var(
                "b",
            ),
        },
    },
}
