crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__builtin_pair_does_not_flatten_tuple_argument.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\npair((a, b))"
info: diagnostic
---
nash::syntax

  × A pair pattern needs exactly two fields.
   ╭─[src/Main.nash:1:5]
 1 │ pair((a, b))
   ·     ─
   ╰────
  help: Write `pair(first, second)`; either field may itself be a pattern.
