crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__builtin_pair_rejects_zero_fields.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\npair()"
info: diagnostic
---
nash::syntax

  × Expected an argument pattern.
   ╭─[src/Main.nash:1:6]
 1 │ pair()
   ·      ─
   ╰────
  help: Use a variable, constructor pattern, or `_`.
