crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__builtin_pair_requires_two_fields.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\npair(a)"
info: diagnostic
---
nash::syntax

  × A pair pattern needs exactly two fields.
   ╭─[src/Main.nash:1:5]
 1 │ pair(a)
   ·     ─
   ╰────
  help: Write `pair(first, second)`; either field may itself be a pattern.
