crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n(a, b,)"
info: diagnostic
---
nash::syntax

  × Expected an argument pattern.
   ╭─[src/Main.nash:1:7]
 1 │ (a, b,)
   ·       ─
   ╰────
  help: Use a variable, constructor pattern, or `_`.
