crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tuple__tests__error_unclosed.snap
---
source: crates/nash-parse/src/pattern/tuple.rs
description: "Code:\n\n(a, b"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:6]
 1 │ (a, b
   · ┬    ┬
   · │    ╰── expected `)`
   · ╰── opened here
   ╰────
  help: Add `)` here.
